--- a/package.json
+++ b/package.json
@@ -1,28 +1,49 @@
 {
-  "name": "Art app",
+  "name": "art-app",
   "version": "0.0.0",
   "description": "Draw and exercise with labed images",
   "keywords": [
     "art",
     "app"
   ],
-  "main": "/index.html",
+  "main": "/public/index.html",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest --verbose ./test",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./ --ignore-path .gitignore",
+    "start": "npx react-scripts start",
+    "build": "npx react-scripts build",
+    "test": "npx jest --verbose ./test",
+    "eject": "npx react-scripts eject",
+    "lint": "npx eslint ./ --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier --write \"{,!(node_modules)/**/}*.js\""
+    "format": "npx prettier --write \"{,!(node_modules)/**/}*.js\""
   },
   "dependencies": {
-    "antd": "^4.16.13"
+    "antd": "^4.16.13",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "eslint": "^7.32.0",
     "jest": "^27.1.1",
     "prettier": "^2.3.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
