--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "art",
     "app"
   ],
-  "main": "/public/index.html",
+  "main": "public/index.html",
   "scripts": {
     "start": "npx react-scripts start",
     "build": "npx react-scripts build",
@@ -18,21 +18,20 @@
   },
   "dependencies": {
     "antd": "^4.16.13",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "cypress": "^8.3.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-testing-library": "^4.12.2",
     "jest": "^27.1.1",
     "prettier": "^2.3.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
